chore(reactive-redis): [PIDM-852] use redis reactive